--- a/demo/fsmonitor_demo.vcxproj.filters
+++ b/demo/fsmonitor_demo.vcxproj.filters
@@ -40,5 +40,8 @@
     <ClCompile Include="..\src\fslistener_win32.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\fsmonitor.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
